--- a/package.json
+++ b/package.json
@@ -1,23 +1,3 @@
-{
-  "name": "artists-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.7.9",
-    "cloudinary": "^2.5.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "mongodb": "^6.12.0",
-    "mongoose": "^8.9.4",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
-  }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:0ede2a4012720cb7caf224ba3411772cc5a6d9b4c603fde44cca62529119f2d0
+size 495
