--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGODB_URI=mongodb+srv://princewilljeremiah83:07088825424@artists-cluster.qoily.mongodb.net/?retryWrites=true&w=majority&appName=artists-cluster
+PORT=5000
 
 CLOUD_NAME=dyrleuyj9
 API_KEY=792683817892233
