--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-MONGODB_URI=mongodb+srv://princewilljeremiah83:07088825424@artists-cluster.qoily.mongodb.net/?retryWrites=true&w=majority&appName=artists-cluster
+MONGODB_URI=mongodb+srv://princewilljeremiah83:07088825424@artists-cluster.e0xjm.mongodb.net/?retryWrites=true&w=majority&appName=artists-cluster
 PORT=5000
 
 CLOUD_NAME=dyrleuyj9
 API_KEY=792683817892233
 API_SECRET=KzYIhb2tHk2Y31WwgXCVVH_0clM
+
