--- a/package.json
+++ b/package.json
@@ -1,3 +1,30 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:3e75cd23951bdcd9d1a72cd10cbcb689648c2fc19d591d4692037bf233226e3c
-size 720
+{
+  "name": "celebrities-backend",
+  "version": "1.0.0",
+  "description": "Backend for the celebrities application",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "mongoose": "^7.0.1",
+    "google-auth-library": "^8.0.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "@types/next-auth": "^3.13.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0"
+  }
+}
