--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "is-stream": "^2.0.1",
     "isarray": "^1.0.0",
     "isexe": "^2.0.0",
+    "joi": "^17.13.3",
     "jsbn": "^1.1.0",
     "json-bigint": "^1.0.0",
     "json-buffer": "^3.0.1",
@@ -205,8 +206,8 @@
     "sparse-bitfield": "^3.0.3",
     "sprintf-js": "^1.1.3",
     "statuses": "^2.0.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.1.1",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "strip-json-comments": "^3.1.1",
     "supports-color": "^7.2.0",
@@ -240,7 +241,6 @@
     "zen-observable": "^0.8.15",
     "zen-observable-ts": "^1.1.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
